--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@
     scroll-behavior: smooth;
 }
 
+
+@import url('https://fonts.googleapis.com/css2?family=Borel&display=swap');
+
 a {
   cursor: pointer;
 }
@@ -27,7 +30,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     /* background-color: #d894ff; */
     color: #fff;
-    background-color: #9d8da7;
+    background-color: var(--last-color); 
     margin: auto;
     /* background: linear-gradient(90deg, var(--primary-color) 66%, #ffffff 100%),
     url("/img/Background/patron-bg-v03.png"); */
@@ -44,17 +47,15 @@ body {
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent; /* Sin fondo en la pista */
+  background: var(--last-color); /* Sin fondo en la pista */
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: var(--secondary-color); /* Color del pulgar de la barra de desplazamiento */
-  border-radius: 8px; /* Bordes redondeados */
-  border: 3px solid transparent; /* Espacio para que se vea el pulgar más grande */
+  background-color: var(--white); /* Color del pulgar de la barra de desplazamiento */
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background-color: rgb(137, 38, 181, .8); /* Color del pulgar al pasar el mouse */
+  background-color: rgba(255, 255, 255, 0.8); /* Color del pulgar al pasar el mouse */
 }
 
 .rainbow {
@@ -73,17 +74,18 @@ rgba(255, 255, 255, 0.8),
 rgba(127, 255, 212, 0.8),
 rgba(255, 99, 71, 0.8)); */
 background: linear-gradient(to right, 
+var(--last-color),  /* Color especificado */
+rgba(255, 255, 255, 0.8),  /* Rosa claro (repetido para suavidad) */
 rgba(255, 182, 193, 0.8), /* Rosa claro */
-rgba(255, 255, 255, 0.8), /* Blanco */
-rgba(127, 255, 212, 0.8), /* Verde claro */
-rgba(255, 99, 71, 0.8),   /* Tomate */
-rgba(113, 19, 156, 0.8),  /* Color especificado */
-rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
+var(--primary-color),  /* Color especificado */
+rgba(255, 255, 255, 0.219),  /* Color especificado */
+rgba(255, 182, 193, 0.8), /* Rosa claro */
+var(--white)  /* Blanco */
 );
-    background-size: 300% 100%; /* Aumentar el tamaño del fondo */
-    animation: rainbow-animation 6s ease-in-out infinite; /* Suavizar la animación */
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  background-size: 300% 100%; /* Aumentar el tamaño del fondo */
+  animation: rainbow-animation 6s ease-in-out infinite; /* Suavizar la animación */
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 @keyframes rainbow-animation {
@@ -99,12 +101,10 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
 }
 
 #loginBtn {
-  position: absolute;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  top: 20px;
-  right: 20px;
   font-size: 24px;
   cursor: pointer;
   color: var(--white);
@@ -116,7 +116,7 @@ rgba(255, 182, 193, 0.8)  /* Rosa claro (repetido para suavidad) */
 }
 
 #loginBtn :hover {
-  color: #d894ff;
+  opacity: 0.9;
 }
 
 .modal {
@@ -179,20 +179,25 @@ input {
 }
 
 #home {
-  position: relative;
+    position: relative;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: start;
     flex-direction: column;
-    background-image: url("/img/feelty-bg.png");
+    background-image: url("/img/bg-landing-page.png"), 
+    radial-gradient(48.42% 48.42% at 49.41% 51.58%, rgba(255, 46, 210, 0.34) 0%, rgba(0, 0, 0, 0.00) 100%);
+    background-blend-mode: screen;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: left;
     background-attachment: fixed;
 
+
     & h1 {
-        font-size: 6rem;
+        font-size: 7rem;
+        text-align: start;
+        line-height: 6rem;
         color: var(--white);
     }
 
@@ -203,9 +208,12 @@ input {
     }
 
     & p {
-        padding: 5rem 0 0 2rem;
-        font-size: 1.5rem;
-        color: #9b9b9b;
+        padding: 2rem;
+        font-family: "Borel", cursive, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-size: 2rem;
+        color: #b3b3b3;
+        /* transform: translateX(70%);
+        transform: translateY(110%); */
     }
 /* 
     & .rainbow {
@@ -225,47 +233,93 @@ input {
     & button {
         font-size: 1.5rem;
         padding: 1rem 2rem;
-        background-color: var(--black);
+        background-color: var(--last-color);
+        box-shadow: 0 0 10px #66666623;
+        opacity: 0.9;
         backdrop-filter: blur(15px);
         color: var(--white);
         border: none;
         border-radius: 5px;
-        cursor: pointer;
         margin: 0 0 0 2rem;
-        opacity: 0.5;
-        box-shadow: 0 0 10px #000;
         transition: all 0.3s ease-in-out;
 
         &:hover {
-          box-shadow: 0 0 10px #00000067;
-          background-color: var(--last-color);
-          opacity: 0.9;
+          opacity: 0.5;
+          box-shadow: 0 0 10px #000;
         }
     }
 
     .container-home {
         position: relative;
+        height: auto;
+        width: 100%;
         display: flex;
-        justify-content: end;
-        align-items: start;
-        flex-direction: column;
-        width: 80%;
-        /* max-width: 500px; */
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
         margin: 0 auto;
 
-        & img {
-            position: absolute;
-            height: auto;
-            width: 150px;
-            top: -250px;
-            left: 0;
+        & .people-img {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: rgba(22, 22, 22, 0.932);
+            backdrop-filter: blur(20px);
+            border-radius: 10px;
 
-            @media (max-width: 1200px) {
-              top: -170px;
+            & .item-img {
+              z-index: 1;
+              position: relative;
+
+              & img {
+                height: auto;
+                width: 170px;
+                margin: .2rem;
+                border-radius: 5px;
+              }
             }
+
+            & .item-img:nth-child(1) {
+              top: -70px;
+              left: -25px;
+            }
+
+              & .item-img:nth-child(2) {
+                top: 70px;
+                right: -25px;
+                padding-left: 1rem;
+              }   
         }
- }
+
+        & #line {
+          position: relative;
+          padding: 1rem;
+          text-shadow: 0 0 10px #00000049;
+          filter: drop-shadow(0 0 10px #000);
+          background-color: rgba(255, 255, 255, 0.096);
+          backdrop-filter: blur(20px);
+          border-radius: 2rem;
+          transition: all 0.3s;
+
+          & svg {
+            border-radius: 20px;
+            padding: .3rem;
+            transition: all 0.5s;
+
+          }
+
+          &:hover {
+            backdrop-filter: blur(20px);
+           }
+
+           &:hover svg {
+            transform: scaleY(1.2) translateX(15px);
+           }
+        }
+
+      }
 }
+
 
 /* Nav bar vertical */
 .social-media {
@@ -828,15 +882,17 @@ p {
 }
 
 header {
+  position: absolute;
   z-index: 300;
-  position: sticky;
   height: 110px;
   width: 100%;
   top: 0;
-  z-index: 10;
+  /* z-index: 10;
   background-color: var(--last-color);
   box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
-  background-image: url(/img/B.png);
+  background-image: url(/img/B.png); */
+  /* backdrop-filter: blur(2px); */
+  background-color: transparent;
 
   & div:first-child {
     height: auto;
@@ -845,7 +901,11 @@ header {
     justify-content: space-between;
     align-items: center;
     background-color: rgba(255, 255, 255, 0.158);
+    backdrop-filter: blur(10px);
     list-style: none;
+    user-select: none;
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
 
     & a {
       list-style: none;
@@ -853,6 +913,7 @@ header {
       text-decoration: none;
       font-size: 3rem;
       padding: .3rem .7rem .5rem .3rem;
+      cursor: pointer;
     }
   }
 
@@ -882,6 +943,10 @@ header {
 
     & img {
       height: 50px;
+      user-select: none;
+      -webkit-user-drag: none;
+      -webkit-user-select: none;
+      -moz-user-select: none;
     }
 
 
@@ -893,6 +958,7 @@ header {
     list-style: none;
     padding: 1rem;
     overflow: hidden;
+    text-shadow: 0 0 10px #0000;
 
     @media screen and (max-width: 768px) {
       display: none;
@@ -903,13 +969,11 @@ header {
     }
 
     & .explorer-books {
-      background-color: #00000027;
-      backdrop-filter: blur(20px);
-      box-shadow: 5px 5px 5px #ffffff27, 5px 5px 5px #83036727, 5px 5px 5px  #b6015bb9, 5px  5px 5px #d894ff;
+      background-color: #ffffff27;
+      /* box-shadow: 5px 5px 5px #ffffff27, 5px 5px 5px #83036727, 5px 5px 5px  #b6015bb9, 5px  5px 5px #d894ff; */
+      backdrop-filter: blur(10px);
       border-radius: 7px; 
-      margin-left: 3rem;
-      padding: .5rem;
-      animation: xplorer 1s  ease infinite alternate;
+      /* animation: xplorer 1s  ease infinite alternate; */
 
       & img {
         display: none;
@@ -920,15 +984,18 @@ header {
         display: none;
       }
     }
+
 .margin-zero {
   margin: 0;
 }
+
     & li {
       position: relative;
       font-size: 1rem;
       font-weight: 800;
       padding: .3rem;
-      color: var(--white);
+      color: #c7c7c7; 
+      text-shadow: 0 0 10px #0000;
       margin: 1rem;
       text-decoration: none;
 
@@ -939,6 +1006,7 @@ header {
         height: 100px;
         transform: rotate(-5deg);
         margin: -1rem;
+        opacity: 0.1;
       }
 
       &::after {
@@ -953,13 +1021,18 @@ header {
         background-repeat: no-repeat;
         background-position: center;
         transform: rotate(65.5deg);
-        opacity: 0.3;
+        opacity: 0.1;
         margin: -1rem;
       }
 
       &:hover {
-        color: var(--primary-color);
+        opacity: 0.9;
+        color: var(--white);
       }
+    }
+
+    #about-us{
+      color:var(--white);
     }
   }
 }
@@ -1582,6 +1655,28 @@ footer {
 
 /* Responsividad */
 @media (max-width: 768px) {
+
+  #home {
+    padding-top: 2rem;
+
+    & h1 {
+      font-size: 4rem
+    }
+
+    & .container-home {
+
+      & .people-img {
+        & .item-img:nth-child(1) {
+            left: -5px;
+          }
+
+        & .item-img:nth-child(2) {
+          right: -5px;
+        }
+      }
+
+    }
+  }
 
   .footer-container {
     flex-direction: column;
