Add styles Home

--- a/style.css
+++ b/style.css
@@ -647,21 +647,28 @@ input {
   }
 
 #reading-tracker {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   max-width: 800px;
   margin: auto;
   padding: 30px;
-  background: white;
-  color: #000;
+  background: var(--last-color);
+  color: var(--white);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 12px;
   margin: 1rem auto;
+
+  & h2 {
+    color: var(--black);
+    margin-bottom: .5rem;
+    font-size: 3rem;
+  }
 }
 
-h1 {
-  color: #8926b5;
-  margin-bottom: .5rem;
-  font-size: 2.2em;
-}
+
 
 p {
   margin-bottom: 30px;
@@ -743,8 +750,11 @@ p {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    /* background: linear-gradient(to bottom, #d894ff 0%, #141414 100%); */
-    background-image: linear-gradient(80deg, #e657b0 0, #d34aae 16.67%, #bb38aa 33.33%, #9d1ea1 50%, #7c0099 66.67%, #5c0094 83.33%, #370093 100%);
+    background-image: url(/img/Dark-Gradient-12.png);
+    background-blend-mode: screen;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     margin: 0 auto;
     padding: 1rem;
 
@@ -754,8 +764,10 @@ p {
       left: 0;
       width: 100%;
       height: 100%;
-      background-color: rgba(0, 0, 0, 0.5);
-      background: linear-gradient(to bottom right, rgb(0, 0, 0), rgba(0, 0, 0, 0.5)), url(/img/star.png);
+      background: linear-gradient(45deg, rgb(27, 27, 27), #00000034);
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
       z-index: -1;
 
       &::after {
@@ -773,14 +785,16 @@ p {
 
     & h2 {
       font-size: 4rem;
-      color: var(--secondary-color);
+      color: var(--white);
       letter-spacing: .2rem;
+      text-shadow: 0 0 15p #000;
     }
     
     & p {
       font-size: 1rem;
       font-weight: 300;
       text-align: center;
+      text-shadow: 0 0 15p #000;
 
     }
 
@@ -833,7 +847,8 @@ p {
     background-color: #f0f0f0;
     border: 2px solid rgba(0, 0, 0, 0.5);
     background-clip: padding-box;
-    clip-path: polygon(0 0, 100% 0, 100% 85%, 50% 100%, 0% 85%);
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 100% 100%, 0% 100%);
+    border-radius: 10px;
   }
 
     & .stories-wrapper {
@@ -1130,7 +1145,9 @@ body.o {
     align-items: center;
     flex-direction: column;
     margin: auto;
-    background-image: url(/img/starbooks-section-v09.png);
+    background-image: url(/img/starbooks-section-responsive.png),
+    radial-gradient(88.42% 78.42% at -9.41% 51.58%, rgba(253, 253, 253, 0.34) 0%, rgba(0, 0, 0, 0) 100%);
+    background-blend-mode: difference;
     background-repeat: no-repeat;
     background-size: cover;
 
@@ -1157,6 +1174,7 @@ body.o {
           background-size: cover;
           background-repeat: no-repeat;
           background-position: center;
+          filter:drop-shadow( 5px 45px 5px #ffffff15);
           transform: rotate(65.5deg);
         }
     }
@@ -1166,24 +1184,23 @@ body.o {
       display: flex;
       justify-content: center;
       align-items: center;
-      gap: .1rem;
-      /* background-color: #ffffff27; */
-      backdrop-filter: blur(20px);
-      padding: 1rem 1rem 0 1rem;
-      border: 1px solid #ffffff27;
-      border-radius: 20px;
+      gap: 1rem;
 
     & p {
       position: relative;
-      font-size: .8rem;
+      backdrop-filter: blur(20px);
+      font-size: 1.3rem;
       color: #fff;
-      font-weight: 100;
-      border-radius: 2px;
+      border-radius: 10px;
       margin-top: 0;
-      padding: .3rem;
+      padding: .5rem;
+      border: 1px solid #ffffff27;
+      transition: all .1s;
 
       &:hover {
-        background-color: #ffffff27;
+        background: linear-gradient(45deg, var(--black), var(--white), var(--black));
+        background-size: 2200px 200%;
+        background-repeat: no-repeat;
       }
     }
   }
@@ -1232,7 +1249,7 @@ body.o {
         transition: .5s all ease;
         transform: rotateX(60deg) scale(0.6);
         perspective: 900px;
-        animation: entry 1s linear 1;
+        transition: .5s all ease;
       }
       
       #c0 {
@@ -1255,9 +1272,7 @@ body.o {
       
       .container:hover {
         z-index: 10;
-        transform: rotate(0deg) scale(0.7) translateY(10px);
-        transition: .5s all ease;
-        box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
+        transform: scale(1) translateY(50px);
         cursor: pointer;
       }
       
@@ -1337,23 +1352,34 @@ body.o {
 }
 
 #buy-books {
-  max-width: 800px;
+  position: relative;
+  height: 100vh;
+  width: 90%;
   margin: 2rem auto;
   padding: 20px;
-  background: white;
+  color: var(--white);
+
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
+  overflow: hidden;
+
+  & button {
+    font-size: .7rem;
+    padding: .1rem;
+  }
+
+  & .slider-buy {
+    width: 100%;
+    margin: auto;
+    overflow: auto;
+  }
 }
 
-/* h1 {
-  color: var(--black);
-  font-size: 3rem;
-  text-align: center;
-  padding: 1rem;
-} */
 
 h2 {
-  color: var(--black);
+  font-size: 3rem;
+  color: var(--white);
+  font-weight: bold;
 }
 
 p {
@@ -1361,27 +1387,40 @@ p {
 }
 
 .libro-lista {
-  list-style-type: none; /* Elimina las viñetas */
+  max-height: 60%;
+  position: relative;
+  width: 150%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  list-style: none; /* Elimina las viñetas */
   padding: 0; /* Elimina el padding */
+  overflow: auto;
+
 }
 
 .libro-lista li {
+  height: 450px;
+  width: 450px;
   margin-bottom: 15px; /* Espacio entre cada elemento de la lista */
-  padding: 10px;
-  border: 1px solid #ccc; /* Borde alrededor de cada empresa */
+  padding: 1rem;
+  border: 1px solid #cccccc2f; /* Borde alrededor de cada empresa */
   border-radius: 5px; /* Bordes redondeados */
   transition: transform 0.2s; /* Animación al pasar el ratón */
 }
 
 .libro-lista li:hover {
-  transform: scale(1.02); /* Efecto de escalado al pasar el ratón */
+  opacity: 0.5;
+backdrop-filter: blur(20px);
 }
 
 .libro-lista a {
-  font-size: 1.5rem;
+  font-size: 1rem;
   text-decoration: none; /* Elimina el subrayado de los enlaces */
-  color: var(--black); /* Color primario 1 */
-  font-weight: bold; /* Texto en negrita para enlaces */
+  color: var(--white);
+  font-weight: bold;
+  padding: .2rem;
 }
 
 .libro-lista a:hover {
@@ -1391,7 +1430,7 @@ p {
 .comprar-btn {
   margin-top: 10px; /* Espacio encima del botón */
   background-color: #d894ff; /* Color primario 2 para el botón */
-  color: white; /* Texto blanco */
+  color: var(--black); /* Texto blanco */
   border: none; /* Sin borde */
   border-radius: 5px; /* Bordes redondeados */
   padding: 10px 15px; /* Relleno dentro del botón */
@@ -1404,7 +1443,7 @@ p {
 }
 
 .comprar-btn a {
-  color: white; /* Texto blanco en el enlace dentro del botón */
+  color: var(--black); /* Texto blanco */
   text-decoration: none; /* Sin subrayado */
 }
 
@@ -1417,8 +1456,12 @@ p {
   align-items: center;
   flex-direction: column;
   background-color: var(--last-color);
-  background-image: url(/img/pexels-i-rem-karakas-53441851-8647727.jpg);
+  background-image: url("/img/Dark-Gradient-01.png"),
+  linear-gradient(30deg, rgba(0, 0, 0, 0.377) 0%, rgba(0, 0, 0, 0.74) 92%);
+  background-blend-mode: screen;
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
   box-shadow: 0 0 20px #0000003f;
   text-align: center;
   text-shadow: 0 0 7px #000000;
@@ -1430,7 +1473,7 @@ p {
     padding: 1rem;
 
     & svg {
-      border: 1px solid #00000027;
+      border: 1px solid #ffffff10;
       border-radius: 50%;
       padding: 1rem;
       margin: 1rem;
@@ -1657,15 +1700,19 @@ footer {
 @media (max-width: 768px) {
 
   #home {
-    padding-top: 2rem;
+    height: auto;
+    padding-top: 8rem;
+
 
     & h1 {
-      font-size: 4rem
+      text-align: center;
+      font-size: 3rem
     }
 
     & .container-home {
 
       & .people-img {
+
         & .item-img:nth-child(1) {
             left: -5px;
           }
@@ -1675,6 +1722,10 @@ footer {
         }
       }
 
+      & #line {
+        text-align: center;
+        padding: 0;
+      }
     }
   }
 
