--- a/style.css
+++ b/style.css
@@ -303,7 +303,7 @@ input {
           filter: drop-shadow(0 0 10px #000);
           /* background-color: rgba(255, 255, 255, 0.096); */
           backdrop-filter: blur(20px);
-          border-radius: 2rem;
+          /* border-radius: 2rem; */
           transition: all 0.3s;
 
           & svg {
@@ -1525,7 +1525,7 @@ p {
       padding: 1rem;
       margin: 1rem;
       transition: all 0.3s;
-      backdrop-filter: blur(20px);
+      backdrop-filter: blur(5px);
       
       &:hover {
         transform: scale(1.1);
